--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ body,html {
 #middle {
     width:100%;
     height:80vh;
-    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("https://images.unsplash.com/photo-1494587351196-bbf5f29cff42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&&w=1351&q=80") center center fixed;
+    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("img/blockchain-3277336.png") center center fixed;
     background-size:100% auto;
     background-repeat:no-repeat;
     color:white;
@@ -87,11 +87,11 @@ body,html {
     font-size:50px;
     width:60%;
 }
-#portfolio {
+#content {
     width:80%;
     padding:2% 10%;
 }
-#portfolio div h1 {
+#content div h1 {
     font-size:40px;
     background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
     -webkit-background-clip:text;
@@ -104,11 +104,11 @@ body,html {
     animation: Gradient 20s ease infinite;
     font-family: 'Comfortaa', cursive;
 }
-#skills {
+#nonprofits {
     margin:4vh 0px !important;
     padding:2vh 0px !important;
 }
-#work {
+#about {
     margin:4vh 0px !important;
     padding:2vh 0px !important;
 }
