--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body,html {
 }
 #title {
     font-size:40px;
-    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
+    background-color: red !important;
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
@@ -93,7 +93,7 @@ body,html {
 }
 #content div h1 {
     font-size:40px;
-    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
+    background-color: red !important;
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
