--- a/index.css
+++ b/index.css
@@ -168,6 +168,11 @@ body,html {
     transition:0.4s ease-in-out;
     margin:30px 10px;
 }
+
+.btn_one > a{
+    color:white !important;
+    text-decoration: none !important;
+}
 .btn_one:hover {
     background:white;
     cursor:pointer;
