--- a/index.css
+++ b/index.css
@@ -73,7 +73,8 @@ body,html {
 #middle {
     width:100%;
     height:80vh;
-    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("img/blockchain-3277336.png") center center fixed;
+   background-color: #000 !important;
+    /** background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("img/blockchain-3277336.png") center center fixed; **/
     background-size:100% auto;
     background-repeat:no-repeat;
     color:white;
