--- a/index.css
+++ b/index.css
@@ -70,6 +70,11 @@ body,html {
 #links a:hover {
     border-bottom:2px solid #fff;
 }
+.sticky {
+	transition: background-color 0.5s linear;
+	background-color: blue;
+	opacity: 90% !important;
+}
 #middle {
     width:100%;
     height:80vh;
