--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@ body,html {
     display:flex;
     justify-content:center;
     flex-direction:column;
-    transition:1s ease-in-out;
+    transition:.7s ease-in-out;
     padding-top:20vh;
 }
 #tagline {
